--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,13 @@
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "@tsconfig/svelte": "^3.0.0",
     "prettier": "2.8.8",
+    "prettier-plugin-multiline-arrays": "^2.0.0",
+    "prettier-plugin-svelte": "^2.10.1",
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.0",
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
-  },
-  "dependencies": {
-    "prettier-plugin-multiline-arrays": "^2.0.0"
   }
 }
